# pololu-usb-i2c-adapter

./: .gitignore  LICENSE.txt  README.md  default.nix
drivers/: pololu-usb-i2c-adapter.inf  pololu-usb-to-i2c-adapter.inf  pololu.cat
firmware/: .cproject  .project  CMakeLists.txt  CMakePresets.json  STM32C071G8UX_FLASH.ld  build.sh  gcc-arm-none-eabi.cmake  nix_builder.sh  program.sh  update_st.sh  update_tinyusb.sh
firmware/src/: gpio.h  main.c  protocol.h  startup_stm32c071rbtx.s  system.c  system.h  tusb_config.h  usb_config.h  usb_descriptors.c
firmware/st/: update_from_st.sh
firmware/tinyusb/: cdc_device.c  dcd_stm32_fsdev.c  tusb_fifo.c  tusb_option.h  usbd_control.c
firmware/tinyusb/common/: tusb_mcu.h
firmware/tinyusb/stm32_fsdev/: fsdev_stm32.h
python/: Doxyfile  README.md  pololu_usb_i2c_adapter.py  pololu_usb_to_i2c_adapter.py  pyproject.toml
